# swordi

./: .envrc  Pipfile  README.md  client.py  message.py  pyproject.toml  server.py
swordi/: client.py  config.py  messages.py  server.py
swordi/client/: entrypoint.py  log.py  protocol.py  ui.py
swordi/core/: objects.py
swordi/core/tests/: test_objects.py
swordi/core/tests/test_flavour/resource/: test_resource.toml
swordi/server/: entrypoint.py  protocol.py
