[tool.poetry]
name = "swordi"
version = "0.1.0"
description = "A simple terminal multiplayer game engine"
authors = ["Felipe Martin <me@fmartingr.com>"]

[tool.poetry.dependencies]
python = "^3.6"
msgpack = "^0.6.1"
prompt_toolkit = "^2.0"

[tool.poetry.dev-dependencies]
black = { version = "*", allows-prereleases = true }
flake8 = "*"
rope = "^0.14.0"

[tool.poetry.scripts]
server = "swordi.server.entrypoint:start"
client = "swordi.client.entrypoint:start"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
